post sfn 2023 refactor

--- a/raw_data/LL12/scripts/cleaning_LL12.ipynb
+++ b/raw_data/LL12/scripts/cleaning_LL12.ipynb
@@ -1182,9 +1182,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ieeg_analysis] *",
+   "display_name": "MyKernalName",
    "language": "python",
-   "name": "conda-env-ieeg_analysis-py"
+   "name": "mykernalname"
   },
   "language_info": {
    "codemirror_mode": {
