--- a/raw_data/LL13/scripts/LL13_cleaning.ipynb
+++ b/raw_data/LL13/scripts/LL13_cleaning.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "import matplotlib\n",
-    "matplotlib.use(\"Qt5 Agg\")\n",
+    "# matplotlib.use(\"Qt5 Agg\")\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -50,15 +50,7 @@
    "execution_count": 2,
    "id": "1aff0958-6a4e-4e42-b7a6-80d00e5f63f3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib qt5"
    ]
@@ -112,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6e0deb60-8aca-4c57-a879-9fb9fb6d1d8e",
    "metadata": {},
    "outputs": [
@@ -134,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "22556d7c-0c0b-40fc-82b1-777357649e6e",
    "metadata": {},
    "outputs": [
@@ -214,7 +206,7 @@
        "    \n",
        "    <tr>\n",
        "        <th>Duration</th>\n",
-       "        <td>00:29:19 (HH:MM:SS)</td>\n",
+       "        <td>00:29:20 (HH:MM:SS)</td>\n",
        "    </tr>\n",
        "</table>"
       ],
@@ -222,7 +214,7 @@
        "<Raw | LL13_raw_ieeg.fif, 149 x 901100 (1760.0 s), ~1.00 GB, data loaded>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "06a738f0-dbc3-4e9b-807c-d21e8eb4fd28",
    "metadata": {},
    "outputs": [
@@ -272,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c262fbb5-6908-4a46-b03c-d815dbe2dc0d",
    "metadata": {},
    "outputs": [
@@ -430,7 +422,7 @@
        " 'STI']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "7d0a4343-948a-4654-bc8f-db9c42ded9bb",
    "metadata": {},
    "outputs": [
@@ -494,7 +486,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "        <th>Bad channels</th>\n",
-       "        <td>CH48, CH47, CH54, CH53, CH13, CH6, CH7, CH2, CH3, CH4, CH5, CH65, CH89, CH0, CH1, CH90, CH91, CH92, CH93, CH94, CH95, CH96, CH97, CH98, CH99, CH100, CH101, CH102, CH103, CH104, CH105, CH106, CH107, CH108, CH109, CH110, CH111, CH112, CH113, CH114, CH115, CH116, CH117, CH118, CH119, CH120, CH121, CH122, CH123, CH124, CH125, CH126, CH127, CH128, CH129, CH130, CH131, CH132, CH133, CH134, CH135, CH136, CH137, CH138, CH139, CH140, CH141, CH142, CH143, CH144, CH145, CH146, CH147</td>\n",
+       "        <td>CH48, CH47, CH54, CH53, CH13, CH6, CH7, CH2, CH3, CH4, CH5, CH65, CH89, CH0, CH1, CH90, CH91, CH92, CH93, CH94, CH95, CH96, CH97, CH98, CH99, CH100, CH101, CH102, CH103, CH104, CH105, CH106, CH107, CH108, CH109, CH110, CH111, CH112, CH113, CH114, CH115, CH116, CH117, CH118, CH119, CH120, CH121, CH122, CH123, CH124, CH125, CH126, CH127, CH128, CH129, CH130, CH131, CH132, CH133, CH134, CH135, CH136, CH137, CH138, CH139, CH140, CH141, CH142, CH143, CH144, CH145, CH146, CH147, CH48, CH47, CH54, CH53, CH13, CH6, CH7, CH2, CH3, CH4, CH5, CH65, CH89, CH0, CH1, CH8, CH9, CH90, CH91, CH92, CH93, CH94, CH95, CH96, CH97, CH98, CH99, CH100, CH101, CH102, CH103, CH104, CH105, CH106, CH107, CH108, CH109, CH110, CH111, CH112, CH113, CH114, CH115, CH116, CH117, CH118, CH119, CH120, CH121, CH122, CH123, CH124, CH125, CH126, CH127, CH128, CH129, CH130, CH131, CH132, CH133, CH134, CH135, CH136, CH137, CH138, CH139, CH140, CH141, CH142, CH143, CH144, CH145, CH146, CH147</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <th>EOG channels</th>\n",
@@ -530,7 +522,7 @@
        "    \n",
        "    <tr>\n",
        "        <th>Duration</th>\n",
-       "        <td>00:29:19 (HH:MM:SS)</td>\n",
+       "        <td>00:29:20 (HH:MM:SS)</td>\n",
        "    </tr>\n",
        "</table>"
       ],
@@ -538,7 +530,7 @@
        "<Raw | LL13_notched_filtered_ieeg.fif, 149 x 901100 (1760.0 s), ~156 kB, data not loaded>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +548,7 @@
     "filtered_notch_data.info['bads'].extend(bad_channels)  \n",
     "\n",
     "# # remove epileptic electrodes\n",
-    "bob_cleaned_bad_channels = ['CH48', 'CH47', 'CH54', 'CH53', 'CH13', 'CH6', 'CH7', 'CH2', 'CH3', 'CH4', 'CH5', 'CH65', 'CH89', 'CH0', 'CH1']\n",
+    "bob_cleaned_bad_channels = ['CH48', 'CH47', 'CH54', 'CH53', 'CH13', 'CH6', 'CH7', 'CH2', 'CH3', 'CH4', 'CH5', 'CH65', 'CH89', 'CH0', 'CH1', 'CH8', 'CH9']\n",
     "filtered_notch_data.info['bads'].extend(bob_cleaned_bad_channels)  \n",
     "\n",
     "# remove out of brain electrodes\n",
@@ -628,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "14a28078-93dd-4d34-b19b-a6ee581b9504",
    "metadata": {},
    "outputs": [
@@ -665,7 +657,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "        <th>Bad channels</th>\n",
-       "        <td>CH48, CH47, CH54, CH53, CH13, CH6, CH7, CH2, CH3, CH4, CH5, CH65, CH89, CH0, CH1, CH90, CH91, CH92, CH93, CH94, CH95, CH96, CH97, CH98, CH99, CH100, CH101, CH102, CH103, CH104, CH105, CH106, CH107, CH108, CH109, CH110, CH111, CH112, CH113, CH114, CH115, CH116, CH117, CH118, CH119, CH120, CH121, CH122, CH123, CH124, CH125, CH126, CH127, CH128, CH129, CH130, CH131, CH132, CH133, CH134, CH135, CH136, CH137, CH138, CH139, CH140, CH141, CH142, CH143, CH144, CH145, CH146, CH147</td>\n",
+       "        <td>CH48, CH47, CH54, CH53, CH13, CH6, CH7, CH2, CH3, CH4, CH5, CH65, CH89, CH0, CH1, CH90, CH91, CH92, CH93, CH94, CH95, CH96, CH97, CH98, CH99, CH100, CH101, CH102, CH103, CH104, CH105, CH106, CH107, CH108, CH109, CH110, CH111, CH112, CH113, CH114, CH115, CH116, CH117, CH118, CH119, CH120, CH121, CH122, CH123, CH124, CH125, CH126, CH127, CH128, CH129, CH130, CH131, CH132, CH133, CH134, CH135, CH136, CH137, CH138, CH139, CH140, CH141, CH142, CH143, CH144, CH145, CH146, CH147, CH48, CH47, CH54, CH53, CH13, CH6, CH7, CH2, CH3, CH4, CH5, CH65, CH89, CH0, CH1, CH8, CH9, CH90, CH91, CH92, CH93, CH94, CH95, CH96, CH97, CH98, CH99, CH100, CH101, CH102, CH103, CH104, CH105, CH106, CH107, CH108, CH109, CH110, CH111, CH112, CH113, CH114, CH115, CH116, CH117, CH118, CH119, CH120, CH121, CH122, CH123, CH124, CH125, CH126, CH127, CH128, CH129, CH130, CH131, CH132, CH133, CH134, CH135, CH136, CH137, CH138, CH139, CH140, CH141, CH142, CH143, CH144, CH145, CH146, CH147</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <th>EOG channels</th>\n",
@@ -701,7 +693,7 @@
        "    \n",
        "    <tr>\n",
        "        <th>Duration</th>\n",
-       "        <td>00:29:19 (HH:MM:SS)</td>\n",
+       "        <td>00:29:20 (HH:MM:SS)</td>\n",
        "    </tr>\n",
        "</table>"
       ],
@@ -709,7 +701,7 @@
        "<Raw | LL13_raw_ieeg.fif, 149 x 901100 (1760.0 s), ~1.00 GB, data loaded>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +719,7 @@
     "raw_fif.info['bads'].extend(bad_channels)  \n",
     "\n",
     "# # remove epileptic electrodes\n",
-    "bob_cleaned_bad_channels = ['CH48', 'CH47', 'CH54', 'CH53', 'CH13', 'CH6', 'CH7', 'CH2', 'CH3', 'CH4', 'CH5', 'CH65', 'CH89', 'CH0', 'CH1']\n",
+    "bob_cleaned_bad_channels = ['CH48', 'CH47', 'CH54', 'CH53', 'CH13', 'CH6', 'CH7', 'CH2', 'CH3', 'CH4', 'CH5', 'CH65', 'CH89', 'CH0', 'CH1', 'CH8', 'CH9']\n",
     "raw_fif.info['bads'].extend(bob_cleaned_bad_channels)  \n",
     "\n",
     "# remove scalp and dc channels\n",
@@ -806,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "8f753563-acfd-4968-9f1a-2ec8274e9570",
    "metadata": {},
    "outputs": [],
@@ -827,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "80fdc820-448a-482b-885b-487c0e9e486a",
    "metadata": {},
    "outputs": [],
@@ -855,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "ec9911ea-8747-4d0d-985a-741289f97a3d",
    "metadata": {},
    "outputs": [],
@@ -878,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "1cee4f7a-7c24-4001-aad1-a4290feeb1a8",
    "metadata": {
     "tags": []
@@ -917,7 +909,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "        <th>Bad channels</th>\n",
-       "        <td>CH48, CH47, CH54, CH53, CH13, CH6, CH7, CH2, CH3, CH4, CH5, CH65, CH89, CH0, CH1, CH90, CH91, CH92, CH93, CH94, CH95, CH96, CH97, CH98, CH99, CH100, CH101, CH102, CH103, CH104, CH105, CH106, CH107, CH108, CH109, CH110, CH111, CH112, CH113, CH114, CH115, CH116, CH117, CH118, CH119, CH120, CH121, CH122, CH123, CH124, CH125, CH126, CH127, CH128, CH129, CH130, CH131, CH132, CH133, CH134, CH135, CH136, CH137, CH138, CH139, CH140, CH141, CH142, CH143, CH144, CH145, CH146, CH147</td>\n",
+       "        <td>CH48, CH47, CH54, CH53, CH13, CH6, CH7, CH2, CH3, CH4, CH5, CH65, CH89, CH0, CH1, CH90, CH91, CH92, CH93, CH94, CH95, CH96, CH97, CH98, CH99, CH100, CH101, CH102, CH103, CH104, CH105, CH106, CH107, CH108, CH109, CH110, CH111, CH112, CH113, CH114, CH115, CH116, CH117, CH118, CH119, CH120, CH121, CH122, CH123, CH124, CH125, CH126, CH127, CH128, CH129, CH130, CH131, CH132, CH133, CH134, CH135, CH136, CH137, CH138, CH139, CH140, CH141, CH142, CH143, CH144, CH145, CH146, CH147, CH48, CH47, CH54, CH53, CH13, CH6, CH7, CH2, CH3, CH4, CH5, CH65, CH89, CH0, CH1, CH8, CH9, CH90, CH91, CH92, CH93, CH94, CH95, CH96, CH97, CH98, CH99, CH100, CH101, CH102, CH103, CH104, CH105, CH106, CH107, CH108, CH109, CH110, CH111, CH112, CH113, CH114, CH115, CH116, CH117, CH118, CH119, CH120, CH121, CH122, CH123, CH124, CH125, CH126, CH127, CH128, CH129, CH130, CH131, CH132, CH133, CH134, CH135, CH136, CH137, CH138, CH139, CH140, CH141, CH142, CH143, CH144, CH145, CH146, CH147</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <th>EOG channels</th>\n",
@@ -953,7 +945,7 @@
        "    \n",
        "    <tr>\n",
        "        <th>Duration</th>\n",
-       "        <td>00:29:19 (HH:MM:SS)</td>\n",
+       "        <td>00:29:20 (HH:MM:SS)</td>\n",
        "    </tr>\n",
        "</table>"
       ],
@@ -961,7 +953,7 @@
        "<Raw | LL13_raw_ieeg.fif, 149 x 901100 (1760.0 s), ~1.00 GB, data loaded>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "83c9a275-c5bd-414a-a3a5-5d30bd0fe689",
    "metadata": {},
    "outputs": [
@@ -1342,9 +1334,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:anaconda3-ieeg_analysis]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-anaconda3-ieeg_analysis-py"
   },
   "language_info": {
    "codemirror_mode": {
