--- a/script_templates/first_dot.ipynb
+++ b/script_templates/first_dot.ipynb
@@ -212,8 +212,8 @@
     "    if zscore:\n",
     "        print('z-scoring to baseline')\n",
     "        bix = [a and b for a, b in zip(TFR.times >= baseline[0], TFR.times <= baseline[1])]\n",
-    "        bmean = TFR.data[:, :, :, bix].mean(axis=(3), keepdims=True)\n",
-    "        bstd = TFR.data[:, :, :, bix].std(axis=(3), keepdims=True)\n",
+    "        bmean = TFR.data[:, :, :, bix].mean(axis=3, keepdims=True).mean(axis=0, keepdims=True)\n",
+    "        bstd = TFR.data[:, :, :, bix].std(axis=3, keepdims=True).std(axis=0, keepdims=True)\n",
     "        TFR.data = (TFR.data - bmean) / bstd\n",
     "\n",
     "    TFR.data = TFR.data.compute()  # Convert the Dask array back to a NumPy array\n",
@@ -353,7 +353,7 @@
     "# compute TRF\n",
     "\n",
     "roi_pres_TFR = []\n",
-    "roi_pres_TFR = MM_compute_TFR(first_dot_roi,freqs,n_cycles,baseline = (-1,5), zscore=True)\n"
+    "roi_pres_TFR = MM_compute_TFR(first_dot_roi,freqs,n_cycles,baseline = (-1,4), zscore=True)\n"
    ]
   },
   {
@@ -390,7 +390,7 @@
     "\n",
     "\n",
     "fig, ax = plt.subplots(figsize = (22, 20))\n",
-    "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -.2, vmax = .2)\n",
+    "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -1, vmax = 1)\n",
     "ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "bar = plt.colorbar(i)\n",
@@ -422,7 +422,7 @@
     "for ch in roi_pres_TFR.ch_names:\n",
     "\n",
     "    fig, ax = plt.subplots(figsize = (22, 20))\n",
-    "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -.4, vmax = .4)\n",
+    "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -2.5, vmax = 2.5)\n",
     "    ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "    ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "    bar = plt.colorbar(i)\n",
@@ -518,7 +518,7 @@
     "\n",
     "roi_pres_TFR = []\n",
     "\n",
-    "roi_pres_TFR = MM_compute_TFR(first_dot_roi,freqs,n_cycles,baseline = (-1,5), zscore=True)\n"
+    "roi_pres_TFR = MM_compute_TFR(first_dot_roi,freqs,n_cycles,baseline = (-1,4), zscore=True)\n"
    ]
   },
   {
@@ -553,7 +553,7 @@
     "plt.rcParams['figure.figsize'] = [22, 20]\n",
     "\n",
     "fig, ax = plt.subplots(figsize = (22, 20))\n",
-    "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -.2, vmax = .2)\n",
+    "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -1, vmax = 1)\n",
     "ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "bar = plt.colorbar(i)\n",
@@ -585,7 +585,7 @@
     "for ch in roi_pres_TFR.ch_names:\n",
     "\n",
     "    fig, ax = plt.subplots(figsize = (22, 20))\n",
-    "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -.4, vmax = .4)\n",
+    "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -2.5, vmax = 2.5)\n",
     "    ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "    ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "    bar = plt.colorbar(i)\n",
@@ -679,7 +679,7 @@
     "# compute TFR\n",
     "roi_pres_TFR = []\n",
     "\n",
-    "roi_pres_TFR = MM_compute_TFR(first_dot_roi,freqs,n_cycles,baseline = (-1,5), zscore=True)\n"
+    "roi_pres_TFR = MM_compute_TFR(first_dot_roi,freqs,n_cycles,baseline = (-1,4), zscore=True)\n"
    ]
   },
   {
@@ -714,7 +714,7 @@
     "plt.rcParams['figure.figsize'] = [22, 20]\n",
     "\n",
     "fig, ax = plt.subplots(figsize = (22, 20))\n",
-    "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin =-.2, vmax = .2)\n",
+    "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -1, vmax = 1)\n",
     "ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "bar = plt.colorbar(i)\n",
@@ -744,7 +744,7 @@
     "for ch in roi_pres_TFR.ch_names:\n",
     "\n",
     "    fig, ax = plt.subplots(figsize = (22, 20))\n",
-    "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -.4, vmax = .4)\n",
+    "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -2.5, vmax = 2.5)\n",
     "    ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "    ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "    bar = plt.colorbar(i)\n",
@@ -839,7 +839,7 @@
     "\n",
     "roi_pres_TFR = []\n",
     "\n",
-    "roi_pres_TFR = MM_compute_TFR(first_dot_roi,freqs,n_cycles,baseline = (-1,5), zscore=True)\n"
+    "roi_pres_TFR = MM_compute_TFR(first_dot_roi,freqs,n_cycles,baseline = (-1,4), zscore=True)\n"
    ]
   },
   {
@@ -874,7 +874,7 @@
     "plt.rcParams['figure.figsize'] = [22, 20]\n",
     "\n",
     "fig, ax = plt.subplots(figsize = (22, 20))\n",
-    "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin =-.2, vmax = .2)\n",
+    "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -1, vmax = 1)\n",
     "ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "bar = plt.colorbar(i)\n",
@@ -904,7 +904,7 @@
     "for ch in roi_pres_TFR.ch_names:\n",
     "\n",
     "    fig, ax = plt.subplots(figsize = (22, 20))\n",
-    "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -.4, vmax = .4)\n",
+    "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -2.5, vmax = 2.5)\n",
     "    ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "    ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "    bar = plt.colorbar(i)\n",
@@ -1006,7 +1006,7 @@
     "# Compute TFR\n",
     "roi_pres_TFR = []\n",
     "\n",
-    "roi_pres_TFR = MM_compute_TFR(first_dot_roi,freqs,n_cycles,baseline = (-1,5), zscore=True)\n"
+    "roi_pres_TFR = MM_compute_TFR(first_dot_roi,freqs,n_cycles,baseline = (-1,4), zscore=True)\n"
    ]
   },
   {
@@ -1041,7 +1041,7 @@
     "plt.rcParams['figure.figsize'] = [15, 11]\n",
     "\n",
     "fig, ax = plt.subplots(figsize = (22, 20))\n",
-    "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin =-.2, vmax = .2)\n",
+    "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -1, vmax = 1)\n",
     "ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "bar = plt.colorbar(i)\n",
@@ -1071,7 +1071,7 @@
     "for ch in roi_pres_TFR.ch_names:\n",
     "\n",
     "    fig, ax = plt.subplots(figsize = (22, 20))\n",
-    "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -.4, vmax = .4)\n",
+    "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -2.5, vmax = 2.5)\n",
     "    ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "    ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "    bar = plt.colorbar(i)\n",
@@ -1165,7 +1165,7 @@
     "# Compute TFR\n",
     "roi_pres_TFR = []\n",
     "\n",
-    "roi_pres_TFR = MM_compute_TFR(first_dot_roi,freqs,n_cycles,baseline = (-1,5), zscore=True)"
+    "roi_pres_TFR = MM_compute_TFR(first_dot_roi,freqs,n_cycles,baseline = (-1,4), zscore=True)"
    ]
   },
   {
@@ -1200,7 +1200,7 @@
     "plt.rcParams['figure.figsize'] = [15, 11]\n",
     "\n",
     "fig, ax = plt.subplots(figsize = (22, 20))\n",
-    "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin =-.2, vmax = .2)\n",
+    "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -1, vmax = 1)\n",
     "ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "bar = plt.colorbar(i)\n",
@@ -1230,7 +1230,7 @@
     "for ch in roi_pres_TFR.ch_names:\n",
     "\n",
     "    fig, ax = plt.subplots(figsize = (22, 20))\n",
-    "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -.4, vmax = .4)\n",
+    "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -2.5, vmax = 2.5)\n",
     "    ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "    ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "    bar = plt.colorbar(i)\n",
@@ -1324,7 +1324,7 @@
     "# Compute TFR\n",
     "roi_pres_TFR = []\n",
     "\n",
-    "roi_pres_TFR = MM_compute_TFR(first_dot_roi,freqs,n_cycles,baseline = (-1,5), zscore=True)"
+    "roi_pres_TFR = MM_compute_TFR(first_dot_roi,freqs,n_cycles,baseline = (-1,4), zscore=True)"
    ]
   },
   {
@@ -1359,7 +1359,7 @@
     "plt.rcParams['figure.figsize'] = [15, 11]\n",
     "\n",
     "fig, ax = plt.subplots(figsize = (22, 20))\n",
-    "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin =-.2, vmax = .2)\n",
+    "i = ax.imshow(roi_pres_TFR.data.mean(axis = 0).mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -1, vmax = 1)\n",
     "ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "bar = plt.colorbar(i)\n",
@@ -1389,7 +1389,7 @@
     "for ch in roi_pres_TFR.ch_names:\n",
     "\n",
     "    fig, ax = plt.subplots(figsize = (22, 20))\n",
-    "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -.4, vmax = .4)\n",
+    "    i = ax.imshow(roi_pres_TFR.data[:, chix, :, :].mean(axis = 0), cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 4, freqs[0], freqs[-1]], vmin = -2.5, vmax = 2.5)\n",
     "    ax.set_yticks(np.linspace(np.min(roi_pres_TFR.freqs),np.max(roi_pres_TFR.freqs),len(roi_pres_TFR.freqs)))\n",
     "    ax.set_yticklabels(np.round(roi_pres_TFR.freqs))\n",
     "    bar = plt.colorbar(i)\n",
