--- a/script_templates/preprocessing.ipynb
+++ b/script_templates/preprocessing.ipynb
@@ -202,32 +202,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99125d84-0012-4bcd-8685-a9c6a7aecc47",
+   "id": "a938b93d-19c7-42cf-af9b-9f4517c2cde6",
    "metadata": {},
    "source": [
     "## Epoching the data "
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "363a8293-c07c-4444-b221-3b7dd5251a47",
+   "metadata": {},
+   "source": [
+    "### Onset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3b2f0fa-0065-4364-ba62-d7dbb927a0fb",
-   "metadata": {},
+   "id": "d34cf356-0303-4ce0-b53c-c3ff8c60316f",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "## Epoching the raw data ##\n",
     "\n",
     "# load data \n",
-    "bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
-    "events = mne.find_events(bp_raw_fif, output='step', consecutive = False, stim_channel='STI')\n",
+    "bp_filtered_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_filtered_clean_data.fif\")\n",
+    "events = mne.find_events(bp_filtered_fif, output='step', consecutive = False, stim_channel='STI')\n",
     "\n",
     "# create events\n",
     "    \n",
     "# only epoch good channels\n",
-    "channels_of_interest =  [x for x in bp_raw_fif.info['ch_names'] if x not in bp_raw_fif.info['bads']]\n",
+    "channels_of_interest =  [x for x in bp_filtered_fif.info['ch_names'] if x not in bp_filtered_fif.info['bads']]\n",
     "\n",
     "# epoch the data\n",
-    "epoched_data = mne.Epochs(bp_raw_fif, events, \n",
+    "epoched_data = mne.Epochs(bp_filtered_fif, events, \n",
     "                          event_id = 1, tmin = -4, tmax = 12, \n",
     "                          baseline = None, picks = channels_of_interest,\n",
     "                             reject_by_annotation = False)\n",
@@ -237,16 +247,51 @@
   },
   {
    "cell_type": "markdown",
-   "id": "583289cc-2b7c-4dba-ae1b-72c9c8e76a1a",
+   "id": "f4302cbb-9bab-4e65-aeb8-dcee85c67880",
    "metadata": {},
    "source": [
-    "## Last Away"
+    "### Trial End"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c865f1da-e02b-4bc3-bc26-7d6a674088b7",
+   "id": "9ea0726b-3f47-4585-bbd5-72c10ed3f06d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Epoching the raw data ##\n",
+    "\n",
+    "# load data \n",
+    "bp_filtered_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_filtered_clean_data.fif\")\n",
+    "events = mne.find_events(bp_filtered_fif, output='step', consecutive = False, stim_channel='STI')\n",
+    "\n",
+    "# create events\n",
+    "    \n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_filtered_fif.info['ch_names'] if x not in bp_filtered_fif.info['bads']]\n",
+    "\n",
+    "# epoch the data\n",
+    "epoched_data = mne.Epochs(bp_filtered_fif, events, \n",
+    "                          event_id = 0, tmin = -5, tmax = 5, \n",
+    "                          baseline = None, picks = channels_of_interest,\n",
+    "                             reject_by_annotation = False)\n",
+    "# save the data\n",
+    "epoched_data.save(f\"{preproc_data_dir}/{subject}_bp_clean_end-locked_ieeg.fif\", overwrite = True, split_size = '1.9GB')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a8943e3-aec3-4aaf-9f8b-a629382b4711",
+   "metadata": {},
+   "source": [
+    "### Last Away"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "736f64f0-a000-4a57-be90-7ff0c27ac7af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,13 +303,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd41c5cd-0432-4bdd-b17d-68ea18a74802",
+   "id": "4c16ca43-2895-4a24-977d-b84035bdff96",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filter to good epochs and fix trial indexing\n",
-    "last_away_data['trial_numeric'] = last_away_data['trial_numeric'] - 1\n",
-    "\n",
     "# create events\n",
     "last_away_events = last_away_data[['sample', 'sample_before', 'event']].copy().to_numpy()\n"
    ]
@@ -272,67 +314,137 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f394447b-f502-4ccb-a7dd-913f458f896b",
+   "id": "2981e217-c706-4d9b-bd78-a9ff79462bd1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load data \n",
+    "bp_filtered_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_filtered_clean_data.fif\")\n",
+    "    \n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_filtered_fif.info['ch_names'] if x not in bp_filtered_fif.info['bads']]\n",
+    "\n",
     "# epoch the data\n",
-    "last_away_epochs = mne.Epochs(bp_raw_fif, last_away_events, \n",
+    "last_away_epochs = mne.Epochs(bp_filtered_fif, last_away_events, \n",
     "                          event_id = 1, tmin = -5, tmax =5, \n",
     "                          baseline = None, picks = channels_of_interest,\n",
     "                             reject_by_annotation = False)\n",
     "# # save the data\n",
-    "last_away_epochs.save(f\"{preproc_data_dir}/{subject}_bp_raw_clean_last_away_events.fif\", overwrite = True, split_size = '1.9GB')\n"
+    "last_away_epochs.save(f\"{preproc_data_dir}/{subject}_bp_filtered_clean_last_away_events.fif\", overwrite = True, split_size = '1.9GB')\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ba28a25e-a34b-49f4-b3a6-c1f15942eab4",
-   "metadata": {},
+   "id": "133aafa9-c73e-4924-ab01-46e860d97993",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Last Dot"
+    "### First Dot"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "027b1c12-306a-4610-b947-3e0ec830322b",
+   "id": "1e6b25a2-0788-4a30-91eb-93b8d1652e1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Load Behavioral Data ##\n",
-    "last_dot_data = pd.read_csv(f\"{raw_data_dir}/behave/{subject}_last_dot_events.csv\")\n",
-    "last_dot_data"
+    "first_dot_data = pd.read_csv(f\"{raw_data_dir}/behave/{subject}_first_dot_events.csv\")\n",
+    "first_dot_data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f8b5e8f-d0e5-458c-b0e8-ba4c2e6f3afd",
+   "id": "8bdbad14-a72f-4c02-a6f2-8b9ada525be6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filter to good epochs and fix trial indexing\n",
-    "last_dot_data['trial_numeric'] = last_dot_data['trial_numeric'] - 1\n",
-    "\n",
     "# create events\n",
-    "last_dot_events = last_dot_data[['sample', 'sample_before', 'event']].copy().to_numpy()\n"
+    "first_dot_data = first_dot_data[['sample', 'sample_before', 'event']].copy().to_numpy()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12b14a15-5400-4e61-a393-7d4347e174ca",
+   "id": "4dfdcf0b-4cf1-45c6-81ac-22eabf10864f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load data \n",
+    "bp_filtered_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_filtered_clean_data.fif\")\n",
+    "\n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_filtered_fif.info['ch_names'] if x not in bp_filtered_fif.info['bads']]\n",
+    "\n",
+    "\n",
     "# epoch the data\n",
-    "last_dot_epochs = mne.Epochs(bp_raw_fif, last_dot_events, \n",
-    "                          event_id = 1, tmin = -.75 * 4, tmax =.75 * 3, \n",
+    "first_dot_epochs = mne.Epochs(bp_filtered_fif, first_dot_data, \n",
+    "                          event_id = 1, tmin = -3, tmax =6, \n",
     "                          baseline = None, picks = channels_of_interest,\n",
     "                             reject_by_annotation = False)\n",
     "# # save the data\n",
-    "last_dot_epochs.save(f\"{preproc_data_dir}/{subject}_bp_raw_clean_last_dot_events.fif\", overwrite = True, split_size = '1.9GB')\n"
+    "first_dot_epochs.save(f\"{preproc_data_dir}/{subject}_bp_filtered_clean_first_dot_events.fif\", overwrite = True, split_size = '1.9GB')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0b4298a-607f-4a6e-b75d-65586d3c1e9d",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## First Move"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25f76656-57cf-43be-89ff-54b68942f662",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Load Behavioral Data ##\n",
+    "first_move_data = pd.read_csv(f\"{raw_data_dir}/behave/{subject}_first_move_events.csv\")\n",
+    "first_move_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63733838-49b2-4d97-a1e6-13a5c06b9b17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create events\n",
+    "first_move_data = first_move_data[['sample', 'sample_before', 'event']].copy().to_numpy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "302f7bc7-6d73-423e-a77a-ee54898b97e6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# load data \n",
+    "bp_filtered_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_filtered_clean_data.fif\")\n",
+    "\n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_filtered_fif.info['ch_names'] if x not in bp_filtered_fif.info['bads']]\n",
+    "\n",
+    "\n",
+    "# epoch the data\n",
+    "first_move_epochs = mne.Epochs(bp_filtered_fif, first_move_data, \n",
+    "                          event_id = 1, tmin = -5, tmax =5, \n",
+    "                          baseline = None, picks = channels_of_interest,\n",
+    "                             reject_by_annotation = False)\n",
+    "# # save the data\n",
+    "first_move_epochs.save(f\"{preproc_data_dir}/{subject}_bp_filtered_clean_first_move_events.fif\", overwrite = True, split_size = '1.9GB')\n"
    ]
   }
  ],
@@ -352,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
