--- a/raw_data/BJH025/scripts/BJH025_bci_to_fif.ipynb
+++ b/raw_data/BJH025/scripts/BJH025_bci_to_fif.ipynb
@@ -86,7 +86,7 @@
     "## check structure if necessary\n",
     "\n",
     "# my_states\n",
-    "# my_params"
+    "my_params"
    ]
   },
   {
@@ -345,9 +345,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ieeg_analysis] *",
+   "display_name": "Python [conda env:anaconda3-ieeg_analysis]",
    "language": "python",
-   "name": "conda-env-ieeg_analysis-py"
+   "name": "conda-env-anaconda3-ieeg_analysis-py"
   },
   "language_info": {
    "codemirror_mode": {
