refactor average tfr scripts

--- a/preprocessing/BJH041/scripts/BJH041_preprocessing.ipynb
+++ b/preprocessing/BJH041/scripts/BJH041_preprocessing.ipynb
@@ -23,7 +23,7 @@
     "import matplotlib\n",
     "matplotlib.use(\"Qt5Agg\")\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
+    "import pandas as pd \n",
     "import numpy as np\n",
     "from scipy import signal, stats\n",
     "import mat73\n",
@@ -554,6 +554,45 @@
    "metadata": {},
    "source": [
     "### Onset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH041/ieeg/BJH041_bp_filtered_clean_data.fif...\n",
+      "    Range : 0 ... 2189999 =      0.000 ...  1094.999 secs\n",
+      "Ready.\n",
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH041/ieeg/BJH041_bp_filtered_clean_data-1.fif...\n",
+      "    Range : 2190000 ... 2998199 =   1095.000 ...  1499.100 secs\n",
+      "Ready.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_6267/644633114.py:1: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH041/ieeg/BJH041_bp_filtered_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  bp_filtered_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_filtered_clean_data.fif\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "480 events found\n",
+      "Event IDs: [0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "bp_filtered_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_filtered_clean_data.fif\")\n",
+    "events = mne.find_events(bp_filtered_fif, output='step', consecutive = False, stim_channel='STI')\n"
    ]
   },
   {
