--- a/preprocessing/LL10/scripts/LL10_preprocessing.ipynb
+++ b/preprocessing/LL10/scripts/LL10_preprocessing.ipynb
@@ -554,6 +554,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening raw data file /home/brooke/pacman/preprocessing/LL10/ieeg/LL10_bp_filtered_clean_data.fif...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2544/2928017732.py:2: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL10/ieeg/LL10_bp_filtered_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  bp_filtered_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_filtered_clean_data.fif\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Range : 0 ... 1559659 =      0.000 ...  3046.209 secs\n",
+      "Ready.\n",
+      "480 events found\n",
+      "Event IDs: [0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load data \n",
+    "bp_filtered_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_filtered_clean_data.fif\")\n",
+    "events = mne.find_events(bp_filtered_fif, output='step', consecutive = False, stim_channel='STI')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "id": "279c987f-0321-4d7a-9d45-5d59f99bda62",
    "metadata": {
