--- a/across_subject_analyses/scripts/count_subject_roi.ipynb
+++ b/across_subject_analyses/scripts/count_subject_roi.ipynb
@@ -549,6 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "ebb3bfe2",
    "metadata": {},
    "outputs": [
     {
@@ -831,6 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "6d2e2263",
    "metadata": {},
    "outputs": [
     {
@@ -860,6 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "c935525c",
    "metadata": {},
    "outputs": [
     {
@@ -892,6 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "17b7f68f",
    "metadata": {},
    "outputs": [
     {
@@ -924,6 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "34870d0b",
    "metadata": {},
    "outputs": [
     {
@@ -946,6 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9d38fe86",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -953,7 +959,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ieeg_analysis2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
