--- a/preprocessing/LL17/scripts/LL17_preprocessing.ipynb
+++ b/preprocessing/LL17/scripts/LL17_preprocessing.ipynb
@@ -1547,7 +1547,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ieeg_analysis2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
