--- a/raw_data/LL14/scripts/LL14_cleaning.ipynb
+++ b/raw_data/LL14/scripts/LL14_cleaning.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "a3785b84-4aaa-4461-a37e-b51a7c1c7913",
    "metadata": {
     "tags": []
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "639733c6-a51d-4ba2-b0bc-64689a345199",
    "metadata": {
     "tags": []
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "2794e660-c449-4c7a-968f-87124f1044ea",
    "metadata": {
     "tags": []
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "6e0deb60-8aca-4c57-a879-9fb9fb6d1d8e",
    "metadata": {
     "tags": []
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "06a738f0-dbc3-4e9b-807c-d21e8eb4fd28",
    "metadata": {
     "tags": []
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "c262fbb5-6908-4a46-b03c-d815dbe2dc0d",
    "metadata": {
     "tags": []
@@ -405,7 +405,7 @@
        " 'STI']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "7d0a4343-948a-4654-bc8f-db9c42ded9bb",
    "metadata": {
     "tags": []
@@ -515,7 +515,7 @@
        "<Raw | LL14_notched_filtered_ieeg.fif, 149 x 2344720 (4579.5 s), ~153 kB, data not loaded>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "14a28078-93dd-4d34-b19b-a6ee581b9504",
    "metadata": {
     "tags": []
@@ -653,7 +653,7 @@
        "<Raw | LL14_raw_ieeg.fif, 149 x 2344720 (4579.5 s), ~153 kB, data not loaded>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "2e29013c-e568-447a-a47b-481b93e9882b",
    "metadata": {
     "tags": []
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "4cd44147-ed15-4bd4-b6c4-5dd845908831",
    "metadata": {},
    "outputs": [],
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "fe17aab8-72f4-4400-97d5-2abfa5771abc",
    "metadata": {},
    "outputs": [],
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "a2d684d1-c82d-4f87-b37e-aca09a1e95ed",
    "metadata": {
     "tags": []
@@ -874,7 +874,7 @@
        "<Raw | LL14_raw_ieeg.fif, 149 x 2344720 (4579.5 s), ~153 kB, data not loaded>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "83c9a275-c5bd-414a-a3a5-5d30bd0fe689",
    "metadata": {},
    "outputs": [
@@ -1049,9 +1049,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Overwriting existing file.\n",
       "Writing /home/brooke/pacman/raw_data/LL14/ieeg/LL14_notched_filtered_clean_ieeg.fif\n",
       "Closing /home/brooke/pacman/raw_data/LL14/ieeg/LL14_notched_filtered_clean_ieeg.fif\n",
       "[done]\n",
+      "Overwriting existing file.\n",
       "Writing /home/brooke/pacman/raw_data/LL14/ieeg/LL14_raw_clean_ieeg.fif\n",
       "Closing /home/brooke/pacman/raw_data/LL14/ieeg/LL14_raw_clean_ieeg.fif\n",
       "[done]\n"
