--- a/raw_data/LL16/scripts/LL16_cleaning.ipynb
+++ b/raw_data/LL16/scripts/LL16_cleaning.ipynb
@@ -45,19 +45,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "1aff0958-6a4e-4e42-b7a6-80d00e5f63f3",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib qt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "639733c6-a51d-4ba2-b0bc-64689a345199",
    "metadata": {
     "tags": []
@@ -92,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2794e660-c449-4c7a-968f-87124f1044ea",
    "metadata": {
     "tags": []
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6e0deb60-8aca-4c57-a879-9fb9fb6d1d8e",
    "metadata": {
     "tags": []
@@ -207,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "06a738f0-dbc3-4e9b-807c-d21e8eb4fd28",
    "metadata": {
     "tags": []
@@ -238,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c262fbb5-6908-4a46-b03c-d815dbe2dc0d",
    "metadata": {
     "tags": []
@@ -398,7 +406,7 @@
        " 'STI']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7d0a4343-948a-4654-bc8f-db9c42ded9bb",
    "metadata": {
     "tags": []
@@ -510,7 +518,7 @@
        "<Raw | LL16_notched_filtered_ieeg.fif, 149 x 940900 (1837.7 s), ~155 kB, data not loaded>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "14a28078-93dd-4d34-b19b-a6ee581b9504",
    "metadata": {
     "tags": []
@@ -683,7 +691,7 @@
        "<Raw | LL16_raw_ieeg.fif, 149 x 940900 (1837.7 s), ~155 kB, data not loaded>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,9 +790,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "2e29013c-e568-447a-a47b-481b93e9882b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# # Annotate Noisy Epochs from Bob's cleaning\n",
@@ -803,9 +813,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "4cd44147-ed15-4bd4-b6c4-5dd845908831",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "## quality check trials ##\n",
@@ -831,9 +843,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "fe17aab8-72f4-4400-97d5-2abfa5771abc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# exclude bad trials/apochs from r behavioral analysis (paused trials and no biscuits)\n",
@@ -854,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a2d684d1-c82d-4f87-b37e-aca09a1e95ed",
    "metadata": {
     "tags": []
@@ -937,7 +951,7 @@
        "<Raw | LL16_raw_ieeg.fif, 149 x 940900 (1837.7 s), ~155 kB, data not loaded>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "afafa922-b494-4ebf-a262-1fa89adb5a89",
    "metadata": {
     "tags": []
@@ -984,10 +998,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7fef8ed64ca0>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7ff63b4a4f70>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -995,15 +1009,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waiting for Loading-Thread to finish... (max. 10 sec)\n",
       "Channels marked as bad:\n",
-      "['CH88', 'CH87', 'CH86']\n"
+      "['CH67', 'CH45', 'CH33', 'CH88', 'CH87', 'CH86', 'CH89', 'CH90', 'CH91', 'CH92', 'CH93', 'CH94', 'CH95', 'CH96', 'CH97', 'CH98', 'CH99', 'CH100', 'CH101', 'CH102', 'CH103', 'CH104', 'CH105', 'CH106', 'CH107', 'CH108', 'CH109', 'CH110', 'CH111', 'CH112', 'CH113', 'CH114', 'CH115', 'CH116', 'CH117', 'CH118', 'CH119', 'CH120', 'CH121', 'CH122', 'CH123', 'CH124', 'CH125', 'CH126', 'CH127', 'CH128', 'CH129', 'CH130', 'CH131', 'CH132', 'CH133', 'CH134', 'CH135', 'CH136', 'CH137', 'CH138', 'CH139', 'CH140', 'CH141', 'CH142', 'CH143', 'CH144', 'CH145', 'CH146', 'CH147']\n",
+      "Channels marked as bad:\n",
+      "none\n"
      ]
     }
    ],
    "source": [
     "# plot for cleaning #\n",
-    "# filtered_notch_data.drop_channels(filtered_notch_data.info['bads'])\n",
+    "filtered_notch_data.drop_channels(filtered_notch_data.info['bads'])\n",
     "filtered_notch_data.plot(events=events, color='b', bad_color = 'red', n_channels = 230, clipping = None, event_color = 'r')"
    ]
   },
@@ -1139,6 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "acaede74",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1146,7 +1162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ieeg_analysis2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
